--- a/finalStyle.css
+++ b/finalStyle.css
@@ -7,7 +7,7 @@
   cursor: default;
 }
 .bodyCenter{
-margin-inline: 5vw 5vw;
+margin-inline: 8vw 8vw;
 }
 .nav-links {
   display: flex;
@@ -52,6 +52,8 @@ margin-inline: 5vw 5vw;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
+  margin-block: 50px;
 }
 .main1 {
   display: flex;
@@ -126,4 +128,92 @@ margin-inline: 5vw 5vw;
 .main2 img {
   max-width: 40vw;
   background-color: #cdcdcd;
+}
+
+
+
+
+
+.serviceSection{
+  display: flex;
+  flex-direction: column;
+}
+.services-list{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.service-card img{
+  max-width: 80%;
+}
+
+
+
+.whyUs{
+  display: flex;
+  flex-direction:row ;
+  /* flex-wrap: wrap; */
+  justify-content: space-around;
+}
+.box{
+  width: 20vw;
+  background-color: #f9f9f9;
+  color: #606060;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition-duration: .3s;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  line-height: 1.7rem;
+}
+.box img{
+  width: 50%;
+  margin: 2rem;
+}
+.box h3{
+  color: black;
+  margin: 2rem;
+  font-weight: 00;
+  font-size: x-large;
+}
+.box:hover{
+    transform: translate(0px, -10px);
+}
+
+
+footer{
+  background-color: #100f1f;
+  color: white;
+}
+
+
+.footerPart{
+  display: flex;
+  justify-content: space-around;
+  height: auto;
+  text-align: left;
+  padding-block: 3rem;
+
+}
+.footerPart li{
+  list-style-type: none;
+  margin: 1rem;
+}
+.footerPart li a{
+  text-decoration: none;
+  list-style-type: none;
+  color: white;
+}
+.footerAction{
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  gap: 2rem;
+}
+.lastfooter{
+  margin: 2rem;
+
 }
