--- a/finalStyle.css
+++ b/finalStyle.css
@@ -12,7 +12,7 @@
 margin-inline: 8vw 8vw;
 }
 
-.newNav{
+/* .newNav{
   display: flex;
   justify-content: space-between;
   border-radius: 10px ;
@@ -20,25 +20,25 @@ margin-inline: 8vw 8vw;
   height: 10vh;
   align-items: center;
   background-color: #fafafa;
+  width: 100%;
+  height: 10%;
   margin-bottom: 5rem;
-  /* padding: 20px 15px; */
-  /* border: 1px solid ; */
 }
 .newNav a img{
   margin-left: 8vw;
   width: auto;
   height: 10vh;
-  
 }
-
 .newNav ul{
   display: flex;
   gap: 50px;
+  justify-content: space-between;
+  margin-right: 2%;
 }
 .newNav ul li{
   list-style-type: none;
   align-self: center;
-  margin: 0 12px;
+  margin: 0 1rem;
 }
 .newNav ul li a{
   text-decoration: none;
@@ -59,7 +59,73 @@ margin-inline: 8vw 8vw;
   align-self: center;
   margin-right: 30px;
   display: none;
+} */
+
+
+ul li{
+  list-style-type: none;
 }
+a{
+  text-decoration: none;
+}
+.flex{
+  display: flex;
+}
+.main-nav{
+  justify-content: space-between;
+  border-radius: 10px ;
+  box-shadow:  0px 10px 10px rgb(217, 217, 217);
+  align-items: center;
+  background-color: #fafafa;
+  height: 10vh;
+  width: 100%;
+  padding-top: 20px;
+  height: 14vh;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+}
+.logo {
+  /* min-width: 20%; */
+  width: 10rem;
+  align-items: end;
+  margin-left: 8vw;
+  
+}
+.logo img{
+  width: 90%;
+  align-items: center;
+  /* margin-top: 20px; */
+}
+.nav-links{
+  gap: 40px;
+  justify-content: end;
+  align-items: center;
+  margin-right: 20px;
+}
+.hover-links{
+  color: #183b56;
+}
+.hover-links:hover{
+  transition: all .2s ease-in-out;
+  color:#2294ed;
+}
+.nav-toggle{
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -69,7 +135,7 @@ margin-inline: 8vw 8vw;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  margin-bottom: 10rem;
+  margin-block: 10rem;
 }
 .main1 {
   display: flex;
@@ -94,7 +160,6 @@ margin-inline: 8vw 8vw;
 }
 
 .whatsapp-container {
-  /* width: 14vw; */
   width: 14rem;
   height: 3rem;
   border-radius: 5px;
@@ -145,8 +210,8 @@ margin-inline: 8vw 8vw;
   border-radius: 5px;
   border: 0;
   font-weight: 500;
-  background-color: white;
-  color: grey;
+  background-color: peachpuff;
+  color: white;
   transition-duration: 0.2s;
 }
 .mail-container:hover {
@@ -194,32 +259,20 @@ margin-block: 5rem;
 .services {
   margin-block: 5rem;
 }
-
 .services h2 {
   text-align: center;
   font-size: xxx-large;
   margin-bottom: 3rem;
 }
-
 .serviceSection {
   display: flex;
-  gap: 1rem;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 5vw;
-}
-
-.services-list {
-  display: flex;
-  flex-direction: row;
-  padding: 60px;
-  gap: 1rem;
-  justify-content: space-around;
+  gap: 2rem;
 }
 
 .service-card {
-  /* padding: 1rem; */
-  width: 20vw;
+  width: 30%;
   border-radius: 5px;
   border: 1px solid #000000;
   box-shadow: 2px 10px 10px grey;
@@ -227,7 +280,7 @@ margin-block: 5rem;
 }
 
 .service-card img {
-  max-width: 100%;
+  width: 100%;
   border-radius: 5px;
 }
 
@@ -237,9 +290,7 @@ margin-block: 5rem;
   padding: 20px;
 }
 
-.bodyCenter {
-  margin-inline: 8vw 8vw;
-}
+
 
 
 
@@ -371,9 +422,9 @@ margin-block: 5rem;
 
 
 footer{
-  /* padding: 5rem; */
   display: flex;
-  justify-content: space-around;;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
   height: auto;
   text-align: right;
   padding-block: 3rem;
